tests/cases/fail/enum_unknown_member.p4
enum TokenKind:
    IDENT
    NUMBER

def main() -> None:
    print(TokenKind.MISSING)
